# legal_swarm

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/authorities/: acra.yaml  adgm_fsra.yaml  bvi_fsc.yaml  central_bank_ireland.yaml  cftc.yaml  cima.yaml  cssf.yaml  dfsa.yaml  jfsc.yaml  mas.yaml  ogier.yaml  sca.yaml  sec.yaml  walkers.yaml
deploy/: Dockerfile  docker-compose.yml
docs/: AUTHORITY_REGISTRY.md  COMPONENT-DIAGRAM.md  CONNECTOR_FRAMEWORK.md  DFD-L0.md  DFD-L1.md  LAYERED-ARCHITECTURE.md  SYSTEM-ARCHTECTURE-DESIGN.md  TEST_REPORTS.md  TIER-1_TEST_REPORT.md  architecture.md  documentation.md
src/agents/: __init__.py  base_agent.py  orchestrator.py
src/audit/: logger.py
src/authority/: __init__.py  discovery.py  endpoints.py  jurisdiction.py  models.py  registry.py  reliability.py  resolver.py
src/confidence/: scorer.py
src/connectors/: __init__.py  base.py  exceptions.py  factory.py  manager.py  models.py  registry.py  scoring.py
src/contradiction/: detector.py
src/governance/: source_governance.py
src/jurisdictions/: __init__.py  base.py  registry.py
src/schema/: schema.py
src/validation/: validators.py
src/versioning/: delta_tracker.py
tests/integration/: test_pipeline.py  test_registry.py
tests/unit/: test_agents.py  test_api_connector.py  test_audit.py  test_authority.py  test_confidence.py  test_connectors.py  test_contradiction.py  test_governance.py  test_html_connector.py  test_http_client.py  test_jurisdictions.py  test_pdf_connector.py  test_schema.py  (+3 more)
(+36 files in other folders)
